@startuml
' Enable class diagram style
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam classFontSize 14
skinparam classFontStyle bold
skinparam packageFontSize 16
skinparam packageFontStyle bold
skinparam arrowFontSize 12
skinparam arrowColor #5d5c5c
skinparam classBorderColor #444444
skinparam classBackgroundColor #F9F9F9
skinparam packageBorderColor #7e7979
skinparam packageBackgroundColor #E6E6E6
hide empty members
left to right direction

package "PkgSanction" {
  class SanctionAbsencePrevisionnelle {
    +id: Integer
  }

  class SanctionAbsence {
    +id: Integer
    +dateDebut: Date
    +dateFin: Date
  }

  class ReglesDeSanction {
    +id: Integer
    +titre: String
    +description: String
    +absencesMax: Integer
    +penalite: String
    +seuilDeNotification: Integer
    +duree: Integer
    +note: String
  }

  class Notification {
    +id: Integer
    +message: String
  }
}

package "PkgJustification" {
  class JustificationAbsence {
    +id: Integer
    +dateDepot: String
    +dateDebut: String
    +DateFin: String
    +fichier: String
    +description: String
    +statut: String
  }

  class Raison {
    +id: Integer
    +code: String
    +libelle: String
    +description: String
  }
}

package "PkgEmploiTemps" {
  class DureeSeance {
    +duree: Integer
  }

  class Seance {
    +id: Integer
    +date: Date
    +heureDebut: Time
    +heureFin: Time
  }
}

package "PkgApprenant" {
  class Apprenant {
    +id: Integer
    +nom: String
    +prenom: String
    +cin: String
    +tele_num: String
    +date_inscription: Date
    +profile_image: String
  }

  class Groupe {
    +id: Integer
    +nom: String
    +description: String
  }
}

package "PkgAbsence" {
  class Absence {
    +id: Integer
    +date_absence: Date
  }
}

Absence "0..*" --> "1" Apprenant : "appartient à"
Absence "0..*" --> "1" Seance : "contient"
Seance --> "1" DureeSeance : "dure"
Apprenant "*" --> "*" Groupe : "membre de"
Apprenant "1" --> "0..*" JustificationAbsence : "possède"
JustificationAbsence "0..*" --> "1" Raison 


ReglesDeSanction "1" --> "0..*" SanctionAbsencePrevisionnelle : "s'applique à"
ReglesDeSanction "1" --> "0..*" SanctionAbsence : "s'applique à"
SanctionAbsence "1" --> "1..*" Notification : "déclenche"
SanctionAbsence "0..1" --> "1..*" Absence : "basée sur"
SanctionAbsencePrevisionnelle "0..1" --> "0..*" Absence : "analyse"
Apprenant "1" --> "0..*" Notification : "reçoit"

@enduml